# aiogram_tests

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  tox.ini
aiogram_tests/: mocked_bot.py
aiogram_tests/handler/: base.py
aiogram_tests/types/dataset/: __init__.py
