[tool.poetry]
name = "aiogram-tests"
version = "1.0.5"
description = "A library for testing your bots on aiogram"
authors = ["k0te1ch <khvostov40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
tox = "^4.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
