[tool.poetry]
name = "aiogram-tests"
version = "1.0.6"
description = "A library for testing your bots on aiogram"
authors = ["k0te1ch <khvostov40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
tox = "^4.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
